fix: update styles for improved readability and consistency in TicketView

--- a/src/components/TicketView/styles.module.css
+++ b/src/components/TicketView/styles.module.css
@@ -66,8 +66,8 @@ h4 {
   span {
     margin-top: 5px;
     margin-left: 27px;
-    color: var(--neutral-500);
-    font-size: 0.7rem;
+    color: var(--neutral-300);
+    font-size: 0.5rem;
   }
 }
 
@@ -78,7 +78,8 @@ h4 {
 
 .avatar {
   img {
-    width: 30px;
+    width: 35px;
+    height: 35px;
     border-radius: 5px;
   }
 }
@@ -86,14 +87,16 @@ h4 {
 .user {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 0.2rem;
 
   & > span {
     font-size: 0.9rem;
   }
 
   span:nth-of-type(2) {
-    color: var(--neutral-500);
-    font-size: 0.7rem;
+    color: var(--neutral-300);
+    font-size: 0.6rem;
     img {
       width: 10px;
       margin-right: 3px;
